# ocrpoc-spacy-layout

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  junit.xml  pyproject.toml  renovate.json  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  renovate.yml
docs/: ai_documentation.md  deployment.md  security.md
src/: pdf_processor.py
tests/: test_pdf_processor.py
