[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrpoc-spacy-layout"
version = "0.1.0"
description = "A proof of concept demonstrating the use of the spacy-layout library to convert PDFs into AI-ready structured data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.10.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.2",
    "blis==1.3.0",
    "catalogue==2.0.10",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "cloudpathlib==0.23.0",
    "colorlog==6.9.0",
    "confection==0.1.5",
    "cymem==2.0.11",
    "dill==0.4.0",
    "docling==2.57.0",
    "docling-core==2.48.4",
    "docling-ibm-models==3.9.1",
    "docling-parse==2.45.0",
    "et_xmlfile==2.0.0",
    "filelock==3.20.0",
    "filetype==1.2.0",
    "fsspec==2025.9.0",
    "hf-xet==1.1.10",
    "huggingface-hub==0.35.3",
    "idna==3.11",
    "Jinja2==3.1.6",
    "jsonlines==3.1.0",
    "jsonref==1.1.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "langcodes==3.5.0",
    "language_data==1.3.0",
    "latex2mathml==3.78.1",
    "lxml==5.4.0",
    "marisa-trie==1.3.1",
    "markdown-it-py==4.0.0",
    "marko==2.2.1",
    "MarkupSafe==3.0.3",
    "mdurl==0.1.2",
    "mpire==2.10.2",
    "mpmath==1.3.0",
    "multiprocess==0.70.18",
    "murmurhash==1.0.13",
    "networkx==3.5",
    "numpy==2.2.6",
    "ocrmac==1.0.0",
    "omegaconf==2.3.0",
    "opencv-python==4.12.0.88",
    "opencv-python-headless==4.12.0.88",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "pluggy==1.6.0",
    "polyfactory==2.22.2",
    "preshed==3.0.10",
    "psutil==5.6.6",
    "pyclipper==1.3.0.post6",
    "pydantic==2.12.2",
    "pydantic-settings==2.11.0",
    "pydantic_core==2.41.4",
    "Pygments==2.19.2",
    "pylatexenc==2.10",
    "pyobjc-core==11.1",
    "pyobjc-framework-Cocoa==11.1",
    "pyobjc-framework-CoreML==11.1",
    "pyobjc-framework-Quartz==11.1",
    "pyobjc-framework-Vision==11.1",
    "pypdfium2==4.30.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "rapidocr==3.4.2",
    "referencing==0.37.0",
    "rpds-py==0.27.1",
    "rtree==1.4.1",
    "safetensors==0.6.2",
    "scipy==1.16.2",
    "semchunk==3.2.3",
    "setuptools==80.9.0",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart_open==7.3.1",
    "soupsieve==2.8",
    "spacy==3.8.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "spacy_layout==0.0.12",
    "srsly==2.5.1",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "thinc==9.1.1",
    "tokenizers==0.22.1",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "typer==0.19.2",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "wrapt==1.17.3",
    "xlsxwriter==3.2.9"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-cov==5.0.0",
    "black==24.8.0",
    "flake8==7.3.0",
    "bandit==1.8.0",
    "pre-commit==3.8.0"
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".tox"
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert checks and shell usage in controlled contexts